<resources>
    <string name="app_name">LeftoverKiller</string>
    <string name="title_searchByRecipes">SearchByRecipes</string>
    <string name="title_SearchByIngredients">SearchByIngredients</string>
    <string name="title_favRecipes">Favorite Recipes</string>
    <string name="warn_no_ingredient_selected">No ingredient has been selected</string>
    <string name="warn_no_recipes_ingredients_found">No recipes with specified ingredients found</string>
    <string name="example">List getMatchingRecipe(List ingredients)
This API method is called in the MatchingRecipesFragment when the user wants to get a list of recipes based on his ingredient selection.

List getRecipes()
This API method is called in the SearchRecipesFragment when the user wants to search based on the recipe name. This API returns all the available recipes.
...
